[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mitu-bot"
version = "0.1.0"
description = "Modular RAG + LangGraph bot with voice I/O"
authors = [{name = "Eric"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"typer>=0.12.3",
"pandas",
"python-dotenv>=1.0.1",
"openai>=1.40.0",
"pyaudio",
"langchain>=0.2.14",
"langchain-community>=0.2.12",
"langchain-openai>=0.2.1",
"langgraph>=0.2.35",
"chromadb>=0.5.5",
"pydantic-settings>=2.4.0",
"tenacity>=8.5.0",
"structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
"pytest>=8.2.0",
"ruff>=0.5.0",
"mypy>=1.10.0"
]

[project.scripts]
mitu = "mitu_bot.app:main"